# terminal-ssr

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: publish.yml
src/: main.rs
src/api/: server.rs
src/config/: config.rs
src/display/: graph.rs
src/telemetry/: sys.rs
