[package]
name = "terminal-ssr"
version = "0.1.4"
edition = "2021"
description = "Server side rendered terminal dashboards"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Common
tokio =  { version = "1.18.0", features = ["full"] }

# Server
axum = "0.7.4"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-http = { version = "0.5.2", features = ["trace", "timeout"] }
futures = "0.3.30"
tokio-stream = "0.1.8"

# TUI
yansi = "1.0.0-gamma"
sysinfo = "0.30.6"
ansi-escapes = "0.1.1"
